gcc/testsuite/gcc.dg/noncompile/init-4.c
/* { dg-require-effective-target gcc_frontend } */
struct a { char *b; } c[D]; /* { dg-error "undeclared" } */
